--- a/HotelBooking/Views/Shared/_Layout.cshtml
+++ b/HotelBooking/Views/Shared/_Layout.cshtml
@@ -24,6 +24,15 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    @if (User.IsInRole("Admin") || User.IsInRole("Employee"))
+                    {
+                        <li>@Html.ActionLink("Manage Hotels", "Index", "Hotels")</li>
+                    }
+                    else
+                    {
+                        <li>@Html.ActionLink("View Hotels", "Index", "Hotels")</li>
+                    }
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
