--- a/HotelBooking/Views/Email/WriteEmail.cshtml
+++ b/HotelBooking/Views/Email/WriteEmail.cshtml
@@ -7,12 +7,12 @@
 <h2>Create</h2>
 
 
-@using (Html.BeginForm("WriteEmail", "Hotels", FormMethod.Post, new { enctype = "multipart/form-data" }))
+@using (Html.BeginForm("WriteEmail", "Email", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>Hotel</h4>
+        <h4>Send Email</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -55,7 +55,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "Index", "Home")
 </div>
 
 @section Scripts {
