geocoding for hotel address, hotel rename

--- a/HotelBooking/Views/Hotel/Details.cshtml
+++ b/HotelBooking/Views/Hotel/Details.cshtml
@@ -42,6 +42,14 @@
             @Html.DisplayFor(model => model.Address)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.CreatedDate)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.CreatedDate)
+        </dd>
+
     </dl>
 </div>
 <p>
