--- a/HotelBooking/Views/Hotel/Index.cshtml
+++ b/HotelBooking/Views/Hotel/Index.cshtml
@@ -4,6 +4,10 @@
     ViewBag.Title = "Hotel";
 }
 
+<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.12.1/css/jquery.dataTables.css">
+
+<script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.js"></script>
+
 <h2>Hotel Listings</h2>
 @if (User.IsInRole("Admin") || User.IsInRole("Employee"))
 {
@@ -11,7 +15,8 @@
         @Html.ActionLink("Create New", "Create")
     </p>
 }
-    <table class="table">
+<table id="hotel-table">
+    <thead>
         <tr>
             <th>
                 @Html.DisplayNameFor(model => model.Title)
@@ -27,9 +32,11 @@
             </th>
             <th></th>
         </tr>
-
+    </thead>
+    <tbody>
         @foreach (var item in Model)
         {
+
             <tr>
                 <td>
                     @Html.DisplayFor(modelItem => item.Title)
@@ -44,14 +51,23 @@
                     @Html.DisplayFor(modelItem => item.Address)
                 </td>
                 <td>
-                    @Html.ActionLink("Details", "Details", new { id = item.Id }) |
+                    @Html.ActionLink("Details", "Details", new { id = item.Id })
                     @if (User.IsInRole("Admin") || User.IsInRole("Employee"))
                     {
+                        @Html.Encode(" | ");
                         @Html.ActionLink("Edit", "Edit", new { id = item.Id });
                         @Html.Encode(" | ");
                         @Html.ActionLink("Delete", "Delete", new { id = item.Id });
                     }
                 </td>
             </tr>
+
         }
+    </tbody>
     </table>
+
+<script>
+    $(document).ready(function () {
+        $('#hotel-table').DataTable();
+    });
+</script>
