--- a/HotelBooking/Views/Shared/_Layout.cshtml
+++ b/HotelBooking/Views/Shared/_Layout.cshtml
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - Search and Explore Highly Rated Hotels</title>
     @Styles.Render("~/Content/css")
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/bootstrap")
     @Scripts.Render("~/bundles/modernizr")
 
 </head>
@@ -26,11 +28,12 @@
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                     @if (User.IsInRole("Admin") || User.IsInRole("Employee"))
                     {
-                        <li>@Html.ActionLink("Manage Hotels", "Index", "Hotels")</li>
+                        <li>@Html.ActionLink("Manage Hotels", "Index", "Hotel")</li>
+                        <li>@Html.ActionLink("Send Email", "WriteEmail", "Email")</li>
                     }
                     else
                     {
-                        <li>@Html.ActionLink("View Hotels", "Index", "Hotels")</li>
+                        <li>@Html.ActionLink("View Hotels", "Index", "Hotel")</li>
                     }
                 </ul>
                 @Html.Partial("_LoginPartial")
@@ -44,9 +47,6 @@
             <p>&copy; @DateTime.Now.Year - Hotel Booking</p>
         </footer>
     </div>
-
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
 </body>
 </html>
