--- a/HotelBooking/Views/Home/Index.cshtml
+++ b/HotelBooking/Views/Home/Index.cshtml
@@ -2,6 +2,7 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-    <h1>Book a hotel today!</h1>
+
+<div id="bannerimage">
+    <h1 style="text-align: center; color: white; padding-top: 30px">Book a hotel today!</h1>
 </div>
