--- a/HotelBooking/Views/Hotel/Details.cshtml
+++ b/HotelBooking/Views/Hotel/Details.cshtml
@@ -24,41 +24,19 @@
     }
 </style>
 
-<h2>Details</h2>
-
 <div>
-    <h4>Hotel</h4>
+    <h2>@Model.Title</h2>
+    <span class="fa fa-star star-rating"></span>
+    <span class="fa fa-star star-rating"></span>
+    <span class="fa fa-star star-rating"></span>
+    <span class="fa fa-star star-rating"></span>
+    <span class="fa fa-star star-rating"></span>
+    (<span id="score"></span>)
     <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Title)
-        </dt>
+    <div style="display: flex; align-items: center; justify-content: center">
+        <img style="width: 60%" src="~/Content/hotel.jpg" />
+    </div>
 
-        <dd>
-            @Html.DisplayFor(model => model.Title)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.PhoneNumber)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.PhoneNumber)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Address)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Address)
-        </dd>
-    </dl>
-    <span class="fa fa-star star-rating"></span>
-    <span class="fa fa-star star-rating"></span>
-    <span class="fa fa-star star-rating"></span>
-    <span class="fa fa-star star-rating"></span>
-    <span class="fa fa-star star-rating"></span>
     <hr />
 </div>
 
@@ -70,21 +48,44 @@
 
 <div class="tab-content">
     <div id="home" class="tab-pane fade in active">
-        <h4>Hotel Details</h4>
-        <p>@Html.DisplayFor(model => model.Description)</p>
+        <h3>Hotel Details</h3>
+        <dl class="dl-horizontal">
+            <dt>
+                @Html.DisplayNameFor(model => model.PhoneNumber)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.PhoneNumber)
+            </dd>
+
+            <dt>
+                @Html.DisplayNameFor(model => model.Address)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.Address)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Description)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Description)
+            </dd>
+        </dl>
         <div id="map-container">
             <div id="map"></div>
         </div>
     </div>
     <div id="book" class="tab-pane fade">
-        <h3>Menu 1</h3>
-        <p>Some content in menu 1.</p>
+        <h3>Book</h3>
+        <p>Book a room today!</p>
     </div>
     <div id="reviews" class="tab-pane fade">
 
         @if (Model.Ratings.Any())
         {
             <h3>Reviews</h3>
+            <br />
             <table id="review-table">
                 <thead>
                     <tr>
@@ -119,40 +120,43 @@
                 </tbody>
             </table>
         }
-
-        @using (Html.BeginForm("AddRating", "Hotel", FormMethod.Post, null))
+        @if (User.Identity.IsAuthenticated)
         {
-            @Html.AntiForgeryToken()
 
-            <div class="form-horizontal">
-                <hr />
-                <h3>Leave a Review</h3>
-                <div class="form-group">
-                    <label class="control-label col-md-2">Score</label>
-                    <div class="col-md-10">
-                        <input class="form-control text-box single-line" data-val="true" data-val-number="The field Score must be a number." data-val-range="The field Score must be between 1 and 5." data-val-range-max="5" data-val-range-min="1" data-val-required="The Score field is required." id="Score" name="Score" type="number" value="1">
-                    </div>
-                </div>
+            using (Html.BeginForm("AddRating", "Hotel", FormMethod.Post, null))
+            {
+                @Html.AntiForgeryToken()
 
-                <div class="form-group">
-                    <label class="control-label col-md-2">Content</label>
-                    <div class="col-md-10">
-                        <input class="form-control text-box single-line" data-val="true" data-val-required="The Content field is required." id="Content" name="Content" type="text" value="This was great">
+                <div class="form-horizontal">
+                    <hr />
+                    <h3>Leave a Review</h3>
+                    <div class="form-group">
+                        <label class="control-label col-md-2">Score</label>
+                        <div class="col-md-10">
+                            <input class="form-control text-box single-line" data-val="true" data-val-number="The field Score must be a number." data-val-range="The field Score must be between 1 and 5." data-val-range-max="5" data-val-range-min="1" data-val-required="The Score field is required." id="Score" name="Score" type="number" value="1">
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label class="control-label col-md-2">Content</label>
+                        <div class="col-md-10">
+                            <input class="form-control text-box single-line" data-val="true" data-val-required="The Content field is required." id="Content" name="Content" type="text" value="This was great">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-md-10">
+                            <input type="hidden" name="HotelId" value="@(Model.Id)" />
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-md-offset-2 col-md-10">
+                            <input type="submit" value="Create" class="btn btn-default" />
+                        </div>
                     </div>
                 </div>
-                <div class="form-group">
-                    <div class="col-md-10">
-                        <input type="hidden" name="HotelId" value="@(Model.Id)" />
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Create" class="btn btn-default" />
-                    </div>
-                </div>
-            </div>
+            }
         }
-    </div>
+        </div>
 </div>
 
 <p>
@@ -167,6 +171,12 @@
 <script>
     $(document).ready(function () {
         $('#review-table').DataTable();
+        const rating = @(Model.Ratings.Any() ? Model.Ratings.Average(x => x.Score) : 0)
+
+        $(".star-rating").filter(function (index) {
+            return index < rating;
+        }).addClass("checked");
+        $("#score").html(rating.toFixed(2));
     });
 
     mapboxgl.accessToken = 'pk.eyJ1IjoiYXBlbjAwMTQiLCJhIjoiY2w2ajF6Y2d4MHRoYTNjcWdzenFieG8wdSJ9.KLV3yGuhiwx1TT8SHsCPVw';
@@ -196,10 +206,4 @@
         map.addControl(directions, 'top-left');
         directions.setDestination([@Model.Longitude, @Model.Latitude]);
     });
-
-    const rating = @(Model.Ratings.Any() ? Model.Ratings.Average(x => x.Score) : 0)
-
-    $(".star-rating").filter(function (index) {
-        return index < rating;
-    }).addClass("checked");
 </script>
